editor-components/hero-section/hero-section25/hero-section25.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  width: 100%;
  background: var(--composer-html-background);
  position: relative;

              &.with-image {
                color: white !important;
              }
  .carousel {

    >div {
      >div {
        >div {
          >div {
            position: relative;
            height: 100vh;

          }
        }
      }
    }

    .slider-image {
      position: absolute;
              &.with-image {
                color: white !important;
              }
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      transition: opacity 0.5s ease-in-out;
      z-index: 1;
    }

              &.with-image {
                color: white !important;
              }
    .overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: var(--composer-overlay-color);
      z-index: 2;
    }
  }

  .item {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    z-index: 2;
    display: flex;
    justify-content: center;

    .left-figure-container {
      position: absolute;
      left: 0;
      width: 100%;
      height: 100%;

      .arrows {
        display: flex;
        gap: var(--composer-gap-lg);
        z-index: 15;
        position: absolute;
        left: calc(10% + var(--composer-gap-md));
        top: calc(35% + var(--composer-gap-md));
        height: fit-content;
        width: fit-content;
        max-width: 20%;

        div {
          display: flex;
          align-items: center;

          .arrow {
            color: white;
            opacity: 0.2;
            transition: all 0.5s;
            font-size: 1.5rem;
            width: 24px;
            height: 24px;
          }

          .arrow:nth-child(1) {
            margin-right: var(--composer-gap-sm);
          }

          .arrow:nth-child(2) {
            margin-left: var(--composer-gap-sm);
          }

          &:hover {
            .arrow {
              color: white;
              opacity: 1;
            }
          }
        }

        .arrow-text {
          color: white;
          max-width: 100%;
          font-size: 1.5rem;
        }

        &.icon-bottom,
        &.no-left-side {
          top: unset;
          height: auto;
          bottom: 20px;
          align-items: end;
        }

        &.no-left-side {
          left: 50px;
        }

        &.black-theme {
          div {
            .arrow {
              color: var(--composer-font-color-primary);
            }
          }

          .arrow-text {
            color: var(--composer-font-color-primary);
          }
        }
      }

      .top-figure,
      .bottom-figure {
        background: var(--composer-html-background);
        position: absolute;
        top: 0;
        left: 0;
        flex: 1;
      }

      .top-figure {
        width: 35vmin;
        height: 35%;
        display: flex;
        align-items: center;
        justify-content: center;
        z-index: 1;
        flex-direction: column;
        gap: var(--composer-gap-xs);

        .pagination {
          width: 100%;
          margin-left: 50%;
          .active-slide {
            color: var(--composer-primary-color);
            font-size: 4rem;
            margin: var(--composer-gap-xs);
          }

          .slide-count-power {
            color: var(--composer-tertiary-color);
            vertical-align: top;

            .divider {
              font-size: 3vh;
            }

            .slide-count {
              font-size: 1.5rem;
              margin: var(--composer-gap-xs);
            }
          }
        }

        .low-op-text {
          opacity: 0.1;
          font-size: 11vh;
          color: var(--composer-font-color-primary);
          font-weight: bold;
          border-radius: var(--composer-border-radius-sm);
          z-index: 14;
          display: -webkit-box;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 1;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
          position: absolute;
          bottom: -30px;

          .background-op-text {
            margin: 0;
          }
        }
      }

      .bottom-figure {
        width: 10%;
        height: 65%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: end;
        gap: var(--composer-gap-md);
        padding-bottom: var(--composer-gap-xl);
        top: 35%;

        .side-text {
          writing-mode: vertical-rl;
          transform: rotate(180deg);
          text-align: center;
          word-spacing: 6px;
          letter-spacing: 4px;
          color: var(--composer-tertiary-color);

          .side-text-content {
            display: flex;
          }
        }

        .line {
          height: 5vh;
          width: 1px;
          background-color: var(--composer-tertiary-color);
          flex-shrink: 0;
        }

        .icons {
          z-index: 3;
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-md);

          .icon {
            color: var(--composer-tertiary-color);
            width: 20px;
            height: 20px;
            flex-shrink: 0;
          }
        }

        &.no-index-display {
          top: 0;
          height: 100%;
          padding: var(--composer-gap-xl) 0;
        }
      }
    }

    .imageless {

      .top-figure,
      .bottom-figure {
        background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
      }
    }

    .content-container {
      width: 100%;
      height: 100%;
      top: 0;
      z-index: 4;
      background-color: transparent;

      .content-max-content {
        width: 100%;
        height: 100%;
        position: relative;

        .layout {
          position: absolute;
          width: 70%;
          display: flex;
          justify-content: flex-end;
          align-items: center;
          height: 100%;
          right: 0px;
          background-color: transparent;

          .content {
            display: flex;
            flex-direction: column;
            align-items: end;
            color: white;
            overflow: hidden;
            width: 100%;
            height: 100%;
            justify-content: center;

            .logo {
              margin-bottom: var(--composer-gap-sm);
              font-size: 2rem;
              aspect-ratio: 3 / 1;
              object-fit: cover;
              max-width: 150px;
              color: white;
              text-align: right;
            }

            .subtitle {
              text-align: end;
              margin-right: 0;
              &::before {
                display: none !important;
              }
              &.subtitle-has-image {
                background: transparent;
                color: white;
                padding: 0;
                margin-bottom: 0;
                &::before { background: transparent !important; }
              }
            }

            .with-image {
              color: white !important;
            }

            .title {
              text-align: end;
              display: -webkit-box;
              -webkit-box-orient: vertical;
              overflow: hidden;
              text-overflow: ellipsis;
              -webkit-line-clamp: 3;
              &.with-image {
                color: white;
              }
            }

            .description {
              text-align: end;
              display: -webkit-box;
              -webkit-box-orient: vertical;
              overflow: hidden;
              text-overflow: ellipsis;
              -webkit-line-clamp: 5;
              &.with-image {
                color: white;
              }
            }

            .button {
              .button-text {
                content: "";
              }

              .button-icon {
                width: 20px;
                height: 20px;
                min-width: 10%;
              }
            }
          }

          &.full-width-right-item {
            width: 100%;
          }
        }

        &.black-theme {
          .layout {
            .content {
              .logo {
                color: var(--composer-font-color-primary);
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .item {
      .left-figure-container {

        .arrows {
          display: flex;
          gap: var(--composer-gap-lg);
          z-index: 15;
          position: absolute;
          left: 17%;
          top: calc(35% + var(--composer-gap-md));
          height: fit-content;
          width: fit-content;
          max-width: 20%;


          &.no-left-side {
             left: 0%;
            max-width: 100%;
            padding: 0 var(--composer-gap-lg);
          }
        }

        .top-figure {
          .low-op-text {
            font-size: 5rem;
          }
        }

        .bottom-figure {
          width: 15%;

          &.no-index-display {
            padding: var(--composer-gap-md) 0;
          }
        }
      }

      .content-container {

        .content-max-content {
          .layout {
            width: 60%;

            .content {
              gap: var(--composer-gap-md);
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .item {
      .left-figure-container {

        .arrows {
          left: 15%;
          top: unset;
          height: auto;
          bottom: 20px;
          max-width: 85%;
          width: 100%;
          justify-content: space-between;
          padding: 0 var(--composer-gap-lg) 0 var(--composer-gap-md);
          align-items: end;
          left: 20%;
          max-width: 80%;
          padding: 0 var(--composer-gap-md);

          &.no-left-side {
            left: 0%;
            max-width: 100%;
            padding: 0 var(--composer-gap-md);
          }
        }

        .top-figure {
          width: 40%;
          height: 30%;

          .pagination {
            .active-slide {
              font-size: 5vh;
            }

            .slide-count-power {

              .divider,
              .slide-count {
                font-size: 1;
              }
            }
          }

          .low-op-text {
            font-size: 6vh;
          }
        }

        .bottom-figure {
          width: 20%;
          height: 80%;
          top: 20%;

          .icons {
            gap: var(--composer-gap-sm);

            .icon {
              width: 12px;
            }
          }
        }
      }

      .content-container {
        .content-max-content {
          .layout {
            display: flex;
            width: 100%;
            height: 100%;
            justify-content: end;
            align-items: center;
            padding-left: calc(20% + var(--composer-gap-sm));

            .content {
              width: 100%;
            }
          }
        }
      }
    }
  }
}

